# reiki_sdk_zephyr

./: .gitmodules  CMakeLists.txt  KConfig
boards/waveshare/esp32c6_1_47_tft/: Kconfig.defconfig  Kconfig.esp32c6_1_47_tft  esp32c6_1_47_tft-pinctrl.dtsi  esp32c6_1_47_tft_esp32c6_appcpu.dts  esp32c6_1_47_tft_esp32c6_appcpu.yaml  esp32c6_1_47_tft_esp32c6_hpcore.dts  esp32c6_1_47_tft_esp32c6_hpcore.yaml  esp32c6_lpcore.dtsi  esp32c6_n8.dtsi
boards/waveshare/esp32s3_1_47_tft/: Kconfig  Kconfig.defconfig  Kconfig.esp32s3_1_47_tft  board.yml  esp32s3_1_47_tft-pinctrl.dtsi  esp32s3_1_47_tft_esp32s3_procpu.dts  esp32s3_1_47_tft_esp32s3_procpu_defconfig
boards/waveshare/esp32s3_1_69_tft_touch/: Kconfig  Kconfig.defconfig  Kconfig.esp32s3_1_69_tft_touch  board.yml  esp32s3_1_69_tft_touch-pinctrl.dtsi  esp32s3_1_69_tft_touch_esp32s3_appcpu.yaml  esp32s3_1_69_tft_touch_esp32s3_procpu.dts  esp32s3_1_69_tft_touch_esp32s3_procpu.yaml  esp32s3_1_69_tft_touch_esp32s3_procpu_defconfig
boards/waveshare/esp32s3_1_8_amoled_touch/: Kconfig  Kconfig.defconfig  Kconfig.esp32s3_1_8_amoled_touch  board.yml  esp32s3_1_8_amoled_touch-pinctrl.dtsi  esp32s3_1_8_amoled_touch_esp32s3_procpu.dts  (+2 more)
drivers/: CMakeLists.txt  Kconfig
drivers/display/: CMakeLists.txt
drivers/gpio/: CMakeLists.txt
drivers/rtc/: CMakeLists.txt
modules/: CMakeLists.txt
modules/Doom/: CMakeLists.txt  README.md
modules/Doom/zephyr/: module.yml
modules/ble_gatt/: CMakeLists.txt
modules/ble_gatt/src/: bt_gatt_ftp.cpp
modules/ble_gatt/zephyr/: module.yml
zephyr/: module.yml
(+17 files in other folders)
